--- a/YAGE.html
+++ b/YAGE.html
@@ -11,4 +11,7 @@
            style="text-decoration:none; color:black;">
            <strong>PROMOCIONES/DEALS</strong>
         </a>
-    </button><br><br> <p align="left">Yagué Café + Bar<br> Vicente Aguirre 069 y Antonio José de Sucre<br> Mindo, Ecuador </p> </body> </html>
+    </button><br><br> 
+         <p align="left">RESERVACIONES: <a href="https://wa.me/593960607090>?text=Hola,%20quiero%20información" 
+           style="text-decoration:none; color:black;">(+593)960607090</a></p>
+         <p align="left">Yagué Café + Bar<br>Vicente Aguirre 069 y Antonio José de Sucre<br>Mindo, Ecuador </p> </body> </html>
