--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 ﻿<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> <div align="left"> <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/YSVNrjPh/LOGO-YAGE.png" width="20%" height="20%" ></a></div> <br>  <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-        <a href="https://drive.google.com/file/d/1KfrdkrqpcO3ESwTNsXqRxaJr50_gnetZ/view?usp=drive_link" 
+        <a href="https://drive.google.com/file/d/1HfJ9NE82dNBVkxgw2FoVFmKHXUhRHghM/view?usp=sharing" 
            style="text-decoration:none; color:black;">
-           <strong>Menú en Español</strong>
+           <strong>Menú Español/English Menu</strong>
         </a>
     </button>
     <br>
 
     <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-        <a href="https://drive.google.com/file/d/1vvCLjqUa9YNSQbUvCU-kzMAJP9QxSDUH/view?usp=drive_link" 
+        <a href="" 
            style="text-decoration:none; color:black;">
-           <strong>Menu in English</strong>
+           <strong>PROMOCIONES/DEALS</strong>
         </a>
-    </button><br><br> <p align="left"> Yagué Café + Bar<br> Vicente Aguirre 069 y Antonio José de Sucre<br> Mindo, Ecuador </p> </body> </html>
+    </button><br><br> 
+         <p align="left">RESERVACIONES: <a href="https://wa.me/593960607090>?text=Hola,%20quiero%20información" 
+           style="text-decoration:none; color:black;">(+593)960607090</a></p>
+         <p align="left">Yagué Café + Bar<br>Vicente Aguirre 069 y Antonio José de Sucre<br>Mindo, Ecuador </p> </body> </html>
