--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
            <strong>PROMOCIONES<br><br>DEALS</strong>
         </a>
     </button><br><br> 
-         <p align="left">RESERVACIONES: <a href="https://wa.me/593960607090>?text=Hola,%20quiero%20información" 
+         <p align="left">RESERVACIONES: <a href="https://wa.me/593960607090?text=¡Hola!%20Necesito%20reservar%20una%20mesa." 
            style="text-decoration:none; color:black;">(+593)960607090</a></p>
          <p align="left">Yagué Café + Bar<br>Vicente Aguirre 069 y Antonio José de Sucre<br>Mindo, Ecuador </p> </body> </html>
