--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> <div align="left"> <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/YSVNrjPh/LOGO-YAGE.png" width="20%" height="20%" ></a></div> <br>  <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-        <a href="https://drive.google.com/file/d/1HfJ9NE82dNBVkxgw2FoVFmKHXUhRHghM/view?usp=sharing" 
+        <a href="https://drive.google.com/file/d/1L_3UX-lhLfPyhL73WIp9VocCF_SaV6P9/view?usp=share_link" 
            style="text-decoration:none; color:black;">
            <strong>Menú Español<br><br>English Menu</strong>
         </a>
