Update index.html with new promotional images
Removed old buttons and added new images for promotions.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,11 @@
-﻿<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> <div align="left"> <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/YSVNrjPh/LOGO-YAGE.png" width="20%" height="20%" ></a></div> <br>  <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-        <a href="https://drive.google.com/file/d/1L_3UX-lhLfPyhL73WIp9VocCF_SaV6P9/view?usp=share_link" 
-           style="text-decoration:none; color:black;">
-           <strong>Menú Español<br><br>English Menu</strong>
-        </a>
-    </button>
-    <br>
-
-    <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-        <a href="" 
-           style="text-decoration:none; color:black;">
-           <strong>PROMOCIONES<br><br>DEALS</strong>
-        </a>
-    </button><br><br> 
+﻿<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> 
+         <div align="left"> 
+         <img src="https://drive.google.com/file/d/1SO91sQYaN2BooZzoiQ1QYlw9HlxVTsAr/view?usp=sharing" width="20%" height="20%"</div> <br>  
+ <div align="left"> 
+         <img src="https://drive.google.com/file/d/1GTEkox4vzFutZzAwqe4ZP8lsv3gAeh5r/view?usp=share_link" width="20%" height="20%"</div>
+                 <div align="left"> 
+         <img src="https://drive.google.com/file/d/1tHCFI_0vIZalMg7TZfhYJqvxxeRSe6fR/view?usp=share_link" width="20%" height="20%"</div>
+                         <br><br> 
          <p align="left">RESERVACIONES: <a href="https://wa.me/593960607090?text=¡Hola!%20Necesito%20reservar%20una%20mesa." 
            style="text-decoration:none; color:black;">(+593)960607090</a></p>
          <p align="left">Yagué Café + Bar<br>Vicente Aguirre 069 y Antonio José de Sucre<br>Mindo, Ecuador </p> </body> </html>
