--- a/YAGE.html
+++ b/YAGE.html
@@ -7,7 +7,7 @@
     <br>
 
     <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-         <a href="README.HTML" 
+         <a href="PROMO.HTML" 
            style="text-decoration:none; color:black;">
            <strong>PROMOCIONES/DEALS</strong>
         </a>
