--- a/YAGE.html
+++ b/YAGE.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> <div align="left"> <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/YSVNrjPh/LOGO-YAGE.png" width="20%" height="20%" ></a></div> <br>  <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-        <a href="https://drive.google.com/file/d/1L_3UX-lhLfPyhL73WIp9VocCF_SaV6P9/view?usp=share_link" 
+<!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> <div align="left"> <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/YSVNrjPh/LOGO-YAGE.png" width="20%" height="20%" ></a></div> <br>  <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
+        <a href="https://drive.google.com/file/d/1bjkKMf-qUq6YI82xrUtAh01ZlH9EVjTn/view?usp=sharing" 
            style="text-decoration:none; color:black;">
            <strong>Menú Español/English Menu</strong>
         </a>
@@ -7,7 +7,7 @@
     <br>
 
     <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
-         <a href="PROMO.HTML" 
+        <a href="https://drive.google.com/file/d/1Xi0Eg_D4L5SzGTXYZIh3wmZDBdBxo-Ss/view?usp=sharing" 
            style="text-decoration:none; color:black;">
            <strong>PROMOCIONES/DEALS</strong>
         </a>
@@ -15,3 +15,4 @@
          <p align="left">RESERVACIONES: <a href="https://wa.me/593960607090>?text=Hola,%20quiero%20información" 
            style="text-decoration:none; color:black;">(+593)960607090</a></p>
          <p align="left">Yagué Café + Bar<br>Vicente Aguirre 069 y Antonio José de Sucre<br>Mindo, Ecuador </p> </body> </html>
+
