--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
         <a href="https://drive.google.com/file/d/1tPeR9-l3dJ8XoUrWJeRFJcVGh62aR0K_/view?usp=drive_link" 
            style="text-decoration:none; color:black;">
-           <strong>/English Menu</strong>
+           <strong>English Menu</strong>
         </a>
     </button>
         <br>
