Update button text to 'Menú Español'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <html lang="es"> <head> <meta charset="UTF-8"> <title>Yagué Café + Bar en Mindo, Ecuador</title> </head> <body bgcolor="#E7D0A6" style="text-align:center; font-family: Arial, sans-serif;"> <div align="left"> <a href="https://postimages.org/" target="_blank"><img src="https://i.postimg.cc/YSVNrjPh/LOGO-YAGE.png" width="20%" height="20%" ></a></div> <br>  <button style="width:300px; height:80px; font-size:20px; margin:10px;" background-color:# 849272; border:none;">
         <a href="https://drive.google.com/file/d/1bjkKMf-qUq6YI82xrUtAh01ZlH9EVjTn/view?usp=sharing" 
            style="text-decoration:none; color:black;">
-           <strong>Menú Español/English Menu</strong>
+           <strong>Menú Español</strong>
         </a>
     </button>
     <br>
